--- a/youtube-clone/styles/header.css
+++ b/youtube-clone/styles/header.css
@@ -12,6 +12,7 @@
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: rgb(230,230,230);
+    z-index: 100;
 
 }
 
@@ -100,6 +101,24 @@
 }
 .notifications-icon{
     height: 24px;
+}
+.notifications-icon-container{
+    position: relative;
+}
+.notifications-count{
+    position: absolute;
+    top: -2px;
+    right: -4px;
+    background-color: red;
+    color: white;
+    font-family: Roboto,Arial;
+    font-size: 11px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    border-radius: 10px;
+
 }
 .current-user-picture{
     height: 32px;
